--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,5 @@
 {
-  "arrowParens": "always",
-  "bracketSpacing": true,
-  "jsxSingleQuote": false,
-  "printWidth": 80,
-  "proseWrap": "preserve",
-  "semi": false,
-  "tabWidth": 2,
+  "singleQuote": true,
   "trailingComma": "all",
-  "useTabs": false
+  "printWidth": 100
 }
